# poker-planning-cli

./: .gitignore  Makefile  README.md  install.sh  package-lock.json  package.json
.cargo/: config.toml
chrome-extension/: PUBLISHING.md  README.md  background.js  content.js  manifest.json  package.sh  resize-icon.sh  resize-pictures.sh
client/: Cargo.toml
client/src/: app.rs  main.rs  network.rs  ui.rs  zones.rs
common/: Cargo.toml
common/src/: lib.rs
npm/: NPM_PUBLISHING.md  bump-version.sh  publish.sh
npm/poker-client/: README.md  package.json
npm/poker-client-darwin-arm64/: package.json
npm/poker-client-linux-x64/: package.json
npm/poker-client-win32-x64/: package.json
npm/poker-planning-cli/: README.md  package.json
npm/poker-planning-client-darwin-arm64/: package.json  poker-client
npm/poker-planning-client-linux-x64/: package.json  poker-client
npm/poker-planning-client-win32-x64/: package.json
npm/poker-planning-server-darwin-arm64/: package.json  poker-server
npm/poker-planning-server-linux-x64/: package.json  poker-server
npm/poker-planning-server-win32-x64/: package.json
npm/poker-server/: README.md  package.json
npm/poker-server-darwin-arm64/: package.json
npm/poker-server-linux-x64/: package.json
npm/poker-server-win32-x64/: package.json
server/: Cargo.toml
server/src/: handler.rs  http_api.rs  main.rs  state.rs
